--- a/Fe/app/globals.css
+++ b/Fe/app/globals.css
@@ -15,27 +15,44 @@ h1.tagline {
   font-size: 22px;
 }
 
-.container {
-  max-width: 300px;
-  margin: 0 auto;
-  margin-top: 20vh;
-}
-
-.tag {
-  text-align: center;
-  font-weight: 500;
-  font-size: large;
+h1.card-title {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 .card {
-  border: 1px solid #bacdd8;
+  background: white;
   padding: 8px;
   border-radius: 12px;
   transition: all 0.3s ease;
+  color: black;
+  transition: box-shadow 0.3s ease;
+  transform: scale(1);
+  transition: transform 0.3s ease;
 }
 
 .card:hover {
   border-color: #81a4c2; /* Change border color on hover */
-  background-color: #f0f4f7; /* Change background color on hover */
+  background-color: #81a4c2; /* Change background color on hover */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
+  color: white;
+  transform: scale(1.1);
+}
+
+.sizes:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
+  color: white;
+  transform: scale(1.1);
+}
+
+.sizes {
+  border-style: solid;
+  border-width: 1.5px;
+  border-color: gray;
+  transition: box-shadow 0.3s ease;
+  transform: scale(1);
+  transition: transform 0.3s ease;
+}
+
+.title {
+  font-weight: 500;
 }
